--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-BOT_TOKEN=5424991242:AAGwomxQz1p46bRi_2m3V7kvJlt5RjK9xr0
-ADMIN_IDS=[5521024440]
+BOT_TOKEN=5424593646:AAGwomxQz7p36bRi_1f3B7fvJlt5RjK9xr0
+ADMIN_IDS=123456,465123
+USERS_GROUP_ID=-498837121
+ADMINS_GROUP_ID=-493847251
+API_KEY=hqwkf216bk23v2kqf
 
 DATABASE=jkfdrlde
 DB_HOST=127.343.0.2
