--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
 BOT_TOKEN=5424593646:AAGwomxQz7p36bRi_1f3B7fvJlt5RjK9xr0
 ADMIN_IDS=123456,465123
-USERS_GROUP_ID=-498837121
-ADMINS_GROUP_ID=-493847251
+USERS_CHAT_ID=-4988765121
+ADMINS_CHAT_ID=-4923447251
+PAYMENTS_CHANNEL=-1002349817
+
 API_KEY=hqwkf216bk23v2kqf
+
+PROXY_IP=150.150.234.42
+PROXY_PORT=1523
+PROXY_LOGIN=hSH32
+PROXY_PASSWORD=kjhSY37sa
 
 DATABASE=jkfdrlde
 DB_HOST=127.343.0.2
